# airflow

./: .gitignore  README.md  pyproject.toml
dags/: 03_01_dags_bash_orperator.py  03_02_dags_conn_test.py  03_03_dags_bash_select_fruits.py  03_04_dags_email_operator.py  04_01_dags_python_import_func.py  04_01_dags_python_operator.py  04_02_dags_python_import_func.py  04_03_dags_python_decorator.py  04_05_dags_python_with_op_args.py  04_06_dags_python_with_op_kwrags.py
plugins/: select_fruit.sh
plugins/common/: common_func.py
