[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["herzblue <herzblue@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
# pip install "apache-airflow[celery]==2.10.5" --constraint "https://raw.githubusercontent.com/apache/airflow/constraints-2.10.5/constraints-3.8.txt"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
